erDiagram
    users {
        int id PK
        varchar username UK
        varchar email UK
        varchar password
        varchar name
        varchar surname
        timestamp created_at
    }
    groups {
        int id PK
        varchar name
        varchar description
    }
    services {
        varchar username PK
    }
    users_has_groups {
        int users_id PK,FK
        int groups_id PK,FK
    }
    services_has_groups {
        varchar services_username PK,FK
        int groups_id PK,FK
    }
    categories {
        int id PK
        varchar name
        text description
    }
    experiences {
        int id PK
        varchar title
        varchar slug UK
        text description
        varchar short_description
        decimal price
        int duration_minutes
        int max_participants
        int category_id FK
        varchar location
        int location_id FK
        tinyint is_active
        timestamp created_at
    }
    experience_photos {
        int id PK
        int experience_id FK
        varchar filename
        tinyint is_cover
        int sort_order
    }
    locations {
        int id PK
        varchar name
        varchar city
        varchar address
        text description
        decimal latitude
        decimal longitude
    }
    guides {
        int id PK
        varchar name
        varchar surname
        text bio
        varchar photo_filename
        varchar languages
        varchar email
        varchar phone
        tinyint is_active
        timestamp created_at
    }
    experience_guides {
        int experience_id PK,FK
        int guide_id PK,FK
    }
    time_slots {
        int id PK
        int experience_id FK
        datetime start_datetime
        int capacity
        int booked_count
        tinyint is_active
        varchar notes
        timestamp created_at
    }
    bookings {
        int id PK
        int user_id FK
        int time_slot_id FK
        int participants_count
        decimal total_price
        enum status
        text notes
        timestamp created_at
    }
    booking_participants {
        int id PK
        int booking_id FK
        varchar name
        varchar surname
    }
    reviews {
        int id PK
        int experience_id FK
        int user_id FK
        tinyint rating
        text comment
        timestamp created_at
    }

    users                ||--o{ users_has_groups      : "appartiene a"
    groups               ||--o{ users_has_groups      : "raggruppa"
    services             ||--o{ services_has_groups   : "esposto a"
    groups               ||--o{ services_has_groups   : "autorizza"

    categories           ||--o{ experiences           : "classifica"
    locations            ||--o{ experiences           : "ospita"
    experiences          ||--o{ experience_photos      : "ha foto"
    experiences          ||--o{ experience_guides      : "assegnata a"
    guides               ||--o{ experience_guides      : "conduce"
    experiences          ||--o{ time_slots             : "ha slot"
    experiences          ||--o{ reviews                : "riceve"

    time_slots           ||--o{ bookings               : "prenotato in"
    users                ||--o{ bookings               : "effettua"
    bookings             ||--o{ booking_participants   : "include"
    users                ||--o{ reviews                : "scrive"
